# USB2Amiga

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ami_joystick.c  ami_joystick.h  ami_kbd.c  ami_kbd.h  ami_mouse.c  ami_mouse.h  tusb_config.h  usb2amiga.c  usb_hid.c  usb_hid.h  usb_hid_gamepad.c  usb_hid_gamepad.h  usb_hid_kbd.c  usb_hid_kbd.h  usb_hid_mouse.c  usb_hid_mouse.h
